# Funny_bot

./: .dockerignore  .gitignore  acync_bot.py  config.py  docker-compose.yml  gigachat_get_token.py  gigachat_request.py  pyproject.toml  supervisord.conf
load_data/: facts.txt  jokes.txt  parables.txt  thinks.txt  toasts.txt
